<resources>
    <string name="app_name">App with back4app</string>

    <string name="back4app_server_url" translatable="false">https://parseapi.back4app.com/</string>
    <!-- Change the following strings as required -->
    <string name="back4app_app_id" translatable="false">FMjGfMp20t3X4VY4yW8hZv4isBPUY94Hk7x4HWSK</string>
    <string name="back4app_client_key" translatable="false">cyVSE4jlHwbIOZMOL0Sr6ItW2MJtjPVGYkfOgBbC</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signup">You have not an account yet? Sign up now!</string>
    <string name="forgetpassword">Forget your password?</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset_password_tv">Enter your Email to Reset you password.</string>
    <string name="reset_password_btn">Reset password</string>

    <!-- message error-->
    <string name="error_id">Id is required!</string>
    <string name="error_name">Name is required!</string>
    <string name="error_age">Age is required!</string>
    <string name="error_date_start">Date is required!</string>
    <string name="error_number_month">Number is required!</string>
    <string name="error_propriety">Propriety is required!</string>
    <string name="error_price">Price is required!</string>
    <string name="error_email">Email is required!</string>
    <string name="error_password">Password is required!</string>
    <string name="error_con_password">ConfirmPassword is required!</string>
    <string name="error_password_length">You must have 7 characters in your password</string>
    <string name="error_password_same">Password are not the same!</string>
    <!--    notification message-->
    <string name="loading">Loading ...</string>
    <string name="send_reset_email">An email was successfully sent with reset instructions.</string>
    <string name="send_reset_email_error">Something went wrong. Look at the ParseException to see what is up.</string>
    <string name="age">Age</string>
    <string name="date_start">Date Start</string>
    <string name="number_month">Number Month</string>
    <string name="price">Price</string>
    <string name="propriety">Propriety</string>
    <string name="home_one_fragment_person">gyms</string>
    <string name="home_one_fragment_admin">Coach</string>
    <string name="add">Add</string>
    <!--    added-->
    <string name="add_name">Name: </string>
    <string name="add_age">Age: </string>
    <string name="add_Date_start">Start date: </string>
    <string name="add_num_month">Number month: </string>
    <string name="add_price">Price: </string>
    <string name="add_propriety">Propriety: </string>
    <string name="add_gender">Gender: </string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="Id">id</string>
    <string name="edit">edit</string>
    <string name="tel">Telephone(Optional)</string>
    <string name="home_three_fragment_tools">Tools</string>
    <string name="home_profile_fragment">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--About Coach-->
    <string name="nameCoach">Name:</string>
    <string name="ageCoach">Age:</string>
    <string name="telCoach">Tel:</string>
    <string name="genderCoach">Gender:</string>
    <string name="messageCoach">Information:</string>
    <string name="search">Enter your username:</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="visit">Log in as a visitor</string>

</resources>
