<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="5dp"

    android:layout_height="match_parent"
    tools:context=".MyFragment.ProfileFragment">



    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tv_id_profile"
    android:text="@string/Id"
    android:padding="5dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_margin="4dp"
    android:textStyle="bold"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:background="@drawable/background_iv_profile"
        android:layout_width="150dp"
        android:scaleType="centerCrop"
        android:layout_height="150dp"
        android:src="@drawable/defult_iv_profile"
       android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/edit_iv_profile"
        android:cropToPadding="true"
        android:scaleType="centerCrop"

        android:background="@drawable/background_iv_profile"
        android:layout_toEndOf="@id/iv_profile"
        android:src="@drawable/ic_edit2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        android:layout_marginTop="-30dp"
        android:layout_marginStart="-30dp"
        android:layout_below="@id/iv_profile"/>

    <TextView
        android:id="@+id/tv_name_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/username"
        android:layout_below="@id/edit_iv_profile"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_age_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:padding="10dp"
        android:gravity="start"
        android:text="@string/age"
        android:layout_below="@id/tv_name_profile"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_date_start_profile"
        android:layout_width="match_parent"
        android:gravity="start"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:padding="10dp"
        android:text="@string/date_start"
        android:layout_below="@id/tv_age_profile"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_number_month_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:gravity="start"

        android:padding="10dp"
        android:text="@string/number_month"
        android:layout_below="@id/tv_date_start_profile"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_price_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:padding="10dp"
        android:text="@string/price"
        android:layout_below="@id/tv_number_month_profile"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_propriety_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="start"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:padding="10dp"
        android:text="@string/propriety"
        android:layout_below="@id/tv_price_profile"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>
</ScrollView>