<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:layout_marginTop="148dp"
        android:background="@drawable/iv_shape"
        android:src="@drawable/login_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/main_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:drawableStart="@drawable/ic_person"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/et_shape"
        android:drawablePadding="5dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <EditText
        android:id="@+id/main_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/et_shape"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_username" />

    <Button
        android:id="@+id/main_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_shape"
        android:onClick="main_login"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_password" />

    <TextView
        android:id="@+id/main_sginin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="46dp"
        android:gravity="center"
        android:onClick="signup"
        android:text="@string/signup"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginTop="16dp"
        android:gravity="center"
        android:onClick="forget"
        android:text="@string/forgetpassword"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_sginin" />

</androidx.constraintlayout.widget.ConstraintLayout>