<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About_Coach"

    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"

        android:theme="@style/ThemeOverlay.AppCompat"
        android:fitsSystemWindows="true"
        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"

            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginStart="10dp"
            app:expandedTitleMarginEnd="26dp"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"

            >
            <ImageView
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:id="@+id/imageCoach"
                android:padding="2dp"
                app:layout_collapseParallaxMultiplier="0.7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolCoach"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:popupTheme="@style/Theme.AppCompat.Light"
                app:layout_collapseMode="pin"

                />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:clipToPadding="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/one"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:text="@string/nameCoach" />

    <TextView
        android:id="@+id/nameCoach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:padding="10dp"
        android:text="name" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/one"
        android:id="@+id/tow"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:text="@string/ageCoach" />

        <TextView
            android:id="@+id/ageCoach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:padding="10dp"
            android:text="age" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/three"
        android:layout_below="@id/tow"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:text="@string/genderCoach" />

        <TextView
            android:id="@+id/genderCoach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:padding="10dp"
            android:text="gen" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/three"
        android:id="@+id/fore"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:text="@string/telCoach" />

        <TextView
            android:id="@+id/telCoach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:padding="10dp"
            android:text="gen" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:id="@+id/info"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:text="@string/messageCoach"
        android:layout_below="@id/fore"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_below="@id/info"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/infoCoach"
        android:layout_height="match_parent"
        android:text="info"/>
</RelativeLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>

